k3s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: tino-ingress
  namespace: tino-sh
spec:
  rules:
  - host: tino.sh
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: tino-main-service
            port:
              number: 7777
      - pathType: Prefix
        path: /projects/
        backend:
          service:
            name: tino-projects-service
            port:
              number: 7777
      - pathType: Prefix
        path: /blog/
        backend:
          service:
            name: tino-blog-service
            port:
              number: 7777
      - pathType: Prefix
        path: /roeter/
        backend:
          service:
            name: tino-roeter-service
            port:
              number: 7777
  tls:
  - hosts:
    - tino.sh
    secretName: tino-sh-tls
